--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,132 @@
-.header {
+/* .header {
     border-bottom: 1px solid grey;
     padding: 1rem;
+} */
+*{
+    font-family: Avenir Next LT Pro;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    outline: none;
+}
+.header-nav{
+    padding: 0 50px;
+    width: 100%;
+    height: 70px;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
+    }
+.olab{
+        padding-top: 30px;
+}
+
+.later{
+    background-color: #E5E5E5;
+} 
+.navbar-nav{
+    margin-left: auto;
+}
+#navs{
+    font-size: 16px;
+    padding-right: 30px;
+    color: #342929;
+}
+.homeb{
+    background-color: #0056B3;
+    border-radius: 5px ;
+    border: none;
+    margin-top: 5px;
+    margin-right: 22px;
+    padding:6px 15px;
+    font-size: 16px;
+}
+.homeb1{
+    background-color: white;
+    margin-top: 5px;
+    margin-right: 30px;
+    padding:6px 15px;
+    font-size: 16px;
+    border: 1px solid #0056B3;
+    border-radius: 5px;
+}
+.start1{
+    color: #0056B3;
+}
+a:hover{
+    color: #F5148E;
+    text-decoration: none;
+}
+.popy{
+    margin-bottom: 70px;
+}
+.taking{
+    padding: 50px 70px;
+    background-color: #E5E5E5;
+}
+
+.start, .start2{
+    color: #ECECEC;
+
+}
+.start2{   
+    margin: 5px;
+    font-size: 24px;
+}
+.grow{
+    font-family: Avenir Next LT Pro;
+    font-size: 49px;
+    font-style: normal;
+    font-weight: 700;
+    color:#342929;
+    ;
+
+
+}
+#feature{
+    color: #0056B3;
+    font-family: Avenir Next LT Pro;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 32px;
+}
+.differ{
+    text-align: center;
+    padding-top: 45px;
+    padding-bottom: 20px;
+}
+
+.linkss{
+    display: flex;
+    padding: 17px;
+    text-decoration: none;
+}
+.loww{
+    font-family: Avenir Next LT Pro;
+width: 419px;
+height: 60px;
+border: 0.7px solid #000000;
+box-sizing: border-box;
+filter: drop-shadow(0px 2px 2px rgba(181, 8, 65, 0.08));
+border-radius: 10px;
+margin: 10px;
+opacity: 0.5px;
+}
+.lower{
+    margin-top: 10px;
+    font-family: Avenir Next LT Pro;
+width: 419px;
+height: 60px;
+color: #FFFFFF;
+background: #393333;
+border: 0.7px solid #000000;
+box-sizing: border-box;
+box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
+border-radius: 10px;
+}
+.modal-header {
+    border-bottom: 0 none;
+}
+
+.modal-footer {
+    border-top: 0 none;
 }
