--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -130,3 +130,21 @@ border-radius: 10px;
 .modal-footer {
     border-top: 0 none;
 }
+/* .header-nav{
+    position: relative;
+    padding: 0 50px;
+    width: 100%;
+    height: 70px;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
+}
+.navbar-nav{
+    margin-left: auto;
+}
+.bg-custom-1 {
+    background-color: #85144b;
+  }
+  
+  .bg-custom-2 {
+  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+  } */
