implement all outstanding features as noted in the meeting

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,34 +1,47 @@
-/* .header {
-    border-bottom: 1px solid grey;
-    padding: 1rem;
-} */
-*{
-    font-family: Avenir Next LT Pro;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    outline: none;
-}
-.header-nav{
-    padding: 0 50px;
+.header-nav1{
+    padding: 15px 0 15px 0;
     width: 100%;
-    height: 70px;
+    /* height: 70px; */
     background: #FFFFFF;
     box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
     }
+.header-nav1 > a > img{
+    padding: 0 0 0 3.67rem;
+}
 .olab{
-        padding-top: 30px;
+    padding-top: 30px;
 }
 
 .later{
+    background-image: url(https://res.cloudinary.com/adesanza/image/upload/v1615208022/zabuni/Vector_38_lcgpqa.svg);
     background-color: #E5E5E5;
+    background-repeat: no-repeat;
+    background-size: contain;
+width: 100%;
+height: 100%;
+padding: 0 0 350px 0;
+
+}
+.loader{
+    margin-top: 2rem;
+font-style: normal;
+font-weight: 600;
+font-size: 32px;
+color: #FFFFFF;
+}
+.accurate{
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+color: #FFFFFF;
+
 } 
 .navbar-nav{
     margin-left: auto;
 }
 #navs{
     font-size: 16px;
-    padding-right: 30px;
+    padding: 10px 30px 0 0;
     color: #342929;
 }
 .homeb{
@@ -56,11 +69,15 @@ a:hover{
     color: #F5148E;
     text-decoration: none;
 }
-.popy{
-    margin-bottom: 70px;
-}
+
 .taking{
-    padding: 50px 70px;
+    width: 100%;
+    padding: 160px 70px 50px;
+    background-color: #E5E5E5;
+    margin-left: 0;
+}
+.taking1{
+    padding: 0 70px 30px;
     background-color: #E5E5E5;
 }
 
@@ -73,18 +90,14 @@ a:hover{
     font-size: 24px;
 }
 .grow{
-    font-family: Avenir Next LT Pro;
-    font-size: 49px;
+    font-size: 54px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 800;
     color:#342929;
-    ;
-
-
+    line-height: 70px;
 }
 #feature{
     color: #0056B3;
-    font-family: Avenir Next LT Pro;
     font-style: normal;
     font-weight: bold;
     font-size: 32px;
@@ -101,27 +114,25 @@ a:hover{
     text-decoration: none;
 }
 .loww{
-    font-family: Avenir Next LT Pro;
-width: 419px;
-height: 60px;
-border: 0.7px solid #000000;
-box-sizing: border-box;
-filter: drop-shadow(0px 2px 2px rgba(181, 8, 65, 0.08));
-border-radius: 10px;
-margin: 10px;
-opacity: 0.5px;
+    width: 419px;
+    height: 60px;
+    border: 0.7px solid #000000;
+    box-sizing: border-box;
+    filter: drop-shadow(0px 2px 2px rgba(181, 8, 65, 0.08));
+    border-radius: 10px;
+    margin: 10px;
+    opacity: 0.5px;
 }
 .lower{
     margin-top: 10px;
-    font-family: Avenir Next LT Pro;
-width: 419px;
-height: 60px;
-color: #FFFFFF;
-background: #393333;
-border: 0.7px solid #000000;
-box-sizing: border-box;
-box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
-border-radius: 10px;
+    width: 419px;
+    height: 60px;
+    color: #FFFFFF;
+    background: #393333;
+    border: 0.7px solid #000000;
+    box-sizing: border-box;
+    box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
+    border-radius: 10px;
 }
 .modal-header {
     border-bottom: 0 none;
@@ -130,21 +141,76 @@ border-radius: 10px;
 .modal-footer {
     border-top: 0 none;
 }
-/* .header-nav{
-    position: relative;
-    padding: 0 50px;
-    width: 100%;
-    height: 70px;
-    background: #FFFFFF;
-    box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
-}
-.navbar-nav{
-    margin-left: auto;
-}
-.bg-custom-1 {
-    background-color: #85144b;
+footer ul {
+    list-style: none;
   }
-  
-  .bg-custom-2 {
-  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
-  } */
+footer h3 {
+    font-weight: 100;
+    margin-bottom: 0;
+  } 
+#advert{
+    width: 237px;
+height: 48px;
+font-style: normal;
+font-weight: normal;
+font-size: 17px;
+line-height: 24px;
+text-align: center;
+
+color: #342929;
+}
+.iconify{
+    color: #FFFFFF;
+}
+#pink{
+    width: 96px;
+    height: 23px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    color: #0056B3;
+}
+.bolar{
+    margin: 30px 30px 0 0;
+    height: 36px;
+    opacity: 0.5;
+    border: 1px solid #0056B3;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+.reserved{
+    padding-left: 40%;
+}
+.searcher{
+    margin-right: 3rem;
+    width: 219px;
+    opacity: 0.5;
+    border: 0;
+    outline: none;
+    background-color: white;
+}
+.search1{
+    margin-top: 14px;
+    color: rgba(52, 41, 41, 0.6);
+    /* border: 1px solid black; */
+}
+::placeholder{
+    width: 221px;
+    height: 14px;
+    font-family: Avenir Next LT Pro;
+    font-size: 12px;
+    line-height: 14px;
+    color: #767676;
+    border: 0;
+}
+.searchContainer {
+    display: inline-flex;
+    margin-right: 35px;
+    border-bottom-style: groove;
+  }
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  -webkit-appearance:none;
+}
