--- a/src/components/search-input-field/search-input-field.css
+++ b/src/components/search-input-field/search-input-field.css
@@ -1,7 +1,7 @@
 .searchContainer {
     display: inline-flex;
     /* flex: 1 1 200px; */
-    flex-basis: 30%;
+    /* flex-basis: 30%; */
     height: 2rem;
     border-bottom: 1px;
     border-bottom-style: groove;
