--- a/src/components/login-form/login-form.css
+++ b/src/components/login-form/login-form.css
@@ -1,12 +1,21 @@
 .login-submit-btn {
-    background-color: #007bff;
+    height: 60px;
+background-color: #0056B3;
+box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
+border-radius: 10px;
+font-size: 24px;
 }
 
 .sign-up-text {
-    color: #007bff;
+    color: #0056B3;
     cursor: pointer;
+    font-style: normal;
+font-weight: bold;
+font-size: 21px;
+}
+.dont{
+    font-size: 17px;
+line-height: 30px;
+color: #393333;
 }
 
-.email-login-input {
-    /* border-radius: 3%; */
-}
