--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,6 +8,13 @@
 .header-nav1 > a > img{
     padding: 0 0 0 3.67rem;
 }
+.header-nav{
+    padding: 10px 50px 3px 25px;
+    width: 100%;
+    /* height: 70px; */
+    background: #FFFFFF;
+    box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
+    }
 .olab{
     padding-top: 30px;
 }
@@ -24,6 +31,7 @@ padding: 0 0 350px 0;
 }
 .loader{
     margin-top: 2rem;
+    padding: 2rem 0 0 0;
 font-style: normal;
 font-weight: 600;
 font-size: 32px;
@@ -50,14 +58,14 @@ color: #FFFFFF;
     border: none;
     margin-top: 5px;
     margin-right: 22px;
-    padding:6px 15px;
+    padding:7px 15px;
     font-size: 16px;
 }
 .homeb1{
     background-color: white;
     margin-top: 5px;
     margin-right: 30px;
-    padding:6px 15px;
+    padding:7px 30px;
     font-size: 16px;
     border: 1px solid #0056B3;
     border-radius: 5px;
@@ -159,9 +167,6 @@ text-align: center;
 
 color: #342929;
 }
-.iconify{
-    color: #FFFFFF;
-}
 #pink{
     width: 96px;
     height: 23px;
@@ -189,11 +194,11 @@ color: #342929;
     outline: none;
     background-color: white;
 }
-.search1{
+/* .search1{
     margin-top: 14px;
     color: rgba(52, 41, 41, 0.6);
-    /* border: 1px solid black; */
-}
+     border: 1px solid black; 
+} */
 ::placeholder{
     width: 221px;
     height: 14px;
@@ -213,4 +218,8 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
   -webkit-appearance:none;
+}
+.cgprofile{
+    width: 25px;
+    height: 25px;
 }
