--- a/src/components/search-input-field/search-input-field.css
+++ b/src/components/search-input-field/search-input-field.css
@@ -6,7 +6,7 @@
     border-bottom: 1px;
     border-bottom-style: groove;
     /* border: 1px solid red; */
-    margin-top: 1.69rem;
+    margin-top: .5rem;
   }
 .searchIcon {
   /* border: 1px solid blue; */
