--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -206,6 +206,7 @@ color: #342929;
     font-size: 12px;
     line-height: 14px;
     color: #767676;
+    font-family: 'Raleway';
     border: 0;
 }
 .searchContainer {
