--- a/src/components/search-input-field/search-input-field.css
+++ b/src/components/search-input-field/search-input-field.css
@@ -26,5 +26,6 @@
     flex: 1;
     outline: none;
     /* line-height: .45rem; */
-    background-color: whitesmoke;
+    background-color: #E5E5E5;
+    
   }
