--- a/src/components/billboards-table/billboard-table.css
+++ b/src/components/billboards-table/billboard-table.css
@@ -1,20 +1,50 @@
+/* *{
+    font-family: 'Raleway';
+} */
 .billboard-table{
-    overflow-x: scroll;
+    /* overflow-x: scroll; */
     background-color: white;
+}
+.lightert{
+    font-weight: bold;
+font-size: 12px;
+line-height: 12px;
+text-transform: uppercase;
+background-color: #0056B3;
+color: #FFFFFF;
+}
+.table td, .table th {
+    padding: 0.75rem 0.37rem;
+    /* vertical-align: top; */
+    /* border-top: 1px solid #dee2e6; */
 }
 .billboard-row > td {
     text-transform: capitalize;
+    font-style: normal;
+font-weight: 600;
+font-size: 12px;
+line-height: 21px;
+/* identical to box height, or 150% */
+
+
+color: #6E6B7B;
 }
 .create-billboard-btn {
     /* border: 1px solid red; */
     margin: 0;
-    padding: 0 .48rem;
-    text-transform: uppercase;
-    background-color: palevioletred;
+    /* padding: 1 .48rem; */
+    /* text-transform: uppercase; */
+    background-color: #F5148E;
+    letter-spacing: 1px;
+    font-size: 12px;
+    border-radius: 5px;
     border: 0;
+    font-weight: 600;
+font-size: 10px;
+line-height: 12px;
 }
 .create-billboard-btn:hover, .create-billboard-btn:not(:disabled):not(.disabled):active, .create-billboard-btn:focus{
-    background-color: palevioletred;
+    background-color: #F5148E;
 }
 
 .edit-delete-container {
@@ -42,11 +72,23 @@
 }
 
 .edit-icon, .delete-icon {
-    font-size: 1.6rem;
+    font-size: 1rem;
+    align-self: center;
+    height: 16.5px;
+    width: 15px;
 }
 .delete-icon {
-    color: red;
+    color: #B50841;
+
+/* left: 2.5px;
+top: 1.5px; */
+border-radius: 0px;
+opacity: 50%;
+}
+.edit-icon{
+    color: #6E6B7B;
+    opacity: 0.7;
 }
 .billboard-amount > span:last-child, .edit-icon-text, .delete-icon-text {
-   font-size: .66rem;
+   font-size: 10px;
 }
