--- a/src/components/billboard-form/billboard-form.css
+++ b/src/components/billboard-form/billboard-form.css
@@ -1,3 +1,10 @@
 .billboard-update-btn{
     text-transform: capitalize;
 }
+.active-status{
+    color: #F5148E;
+}
+.inactive-status{
+    color: #0056B3;
+
+}
