--- a/src/components/billboards-table/billboard-table.css
+++ b/src/components/billboards-table/billboard-table.css
@@ -1,9 +1,10 @@
-/* *{
-    font-family: 'Raleway';
-} */
 .billboard-table{
     /* overflow-x: scroll; */
     background-color: white;
+}
+tablebody :hover{
+    background: #FFFFFF;
+box-shadow: 0px 4px 4px 1px rgba(0, 86, 179, 0.15);
 }
 .lightert{
     font-weight: bold;
@@ -13,10 +14,17 @@ text-transform: uppercase;
 background-color: #0056B3;
 color: #FFFFFF;
 }
+.table thead th{
+    vertical-align: middle;
+}
 .table td, .table th {
     padding: 0.75rem 0.37rem;
-    /* vertical-align: top; */
+    /* vertical-align: middle; */
     /* border-top: 1px solid #dee2e6; */
+}
+.table-hover :hover{
+    background: #FFFFFF;
+box-shadow: 0px 4px 4px 1px rgba(0, 86, 179, 0.15);
 }
 .billboard-row > td {
     text-transform: capitalize;
@@ -91,4 +99,11 @@ opacity: 50%;
 }
 .billboard-amount > span:last-child, .edit-icon-text, .delete-icon-text {
    font-size: 10px;
+}
+.active-status{
+    color: #F5148E;
+}
+.inactive-status{
+    color: #0056B3;
+
 }
