--- a/src/components/billboards-table/billboard-table.css
+++ b/src/components/billboards-table/billboard-table.css
@@ -1,8 +1,11 @@
-.billboard-table{
+table tbody{
     /* overflow-x: scroll; */
     background-color: white;
 }
-tablebody :hover{
+.billboard-table{
+    width: 100%;
+}
+table tbody tr:hover{
     background: #FFFFFF;
 box-shadow: 0px 4px 4px 1px rgba(0, 86, 179, 0.15);
 }
@@ -11,20 +14,24 @@ box-shadow: 0px 4px 4px 1px rgba(0, 86, 179, 0.15);
 font-size: 12px;
 line-height: 12px;
 text-transform: uppercase;
-background-color: #0056B3;
+/* background-color: #0056B3; */
 color: #FFFFFF;
+}
+table th:first-child{
+    border-radius:6px 0 0 0px;
+} 
+table th:last-child{
+    border-radius:0 6px 0px 0;
 }
 .table thead th{
     vertical-align: middle;
+    background: #0056B3;
+/* border-radius: 6px 6px 0px 0px; */
 }
 .table td, .table th {
     padding: 0.75rem 0.37rem;
     /* vertical-align: middle; */
     /* border-top: 1px solid #dee2e6; */
-}
-.table-hover :hover{
-    background: #FFFFFF;
-box-shadow: 0px 4px 4px 1px rgba(0, 86, 179, 0.15);
 }
 .billboard-row > td {
     text-transform: capitalize;
@@ -99,11 +106,4 @@ opacity: 50%;
 }
 .billboard-amount > span:last-child, .edit-icon-text, .delete-icon-text {
    font-size: 10px;
-}
-.active-status{
-    color: #F5148E;
-}
-.inactive-status{
-    color: #0056B3;
-
 }
