--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -6,7 +6,7 @@
 .dashboard-content {
     background-color: #E5E5E5;
     width: auto;
-    /* flex-basis: 88%; */
+    flex-basis: 100%;
     padding: .4rem 0 0 182px;
     /* border: 1px solid green; */
 }
