delete icon edit

--- a/src/components/billboards-table/billboard-table.css
+++ b/src/components/billboards-table/billboard-table.css
@@ -96,7 +96,7 @@ line-height: 12px;
 .delete-icon {
     color: #B50841;
 /* border-radius: 0px; */
-opacity: 70%;
+/* opacity: 70%; */
 }
 .edit-icon{
     color: #6E6B7B;
