--- a/src/components/billboard-form/billboard-form.css
+++ b/src/components/billboard-form/billboard-form.css
@@ -1,3 +1,18 @@
-.billboard-update-btn{
-    text-transform: capitalize;
+.billboard-update-btn {
+  text-transform: capitalize;
+}
+.form-control {
+  border: 0.5px solid #0056b3;
+  box-sizing: border-box;
+  filter: drop-shadow(0px 2px 2px rgba(181, 8, 65, 0.08));
+  border-radius: 10px;
+}
+.billboard-update-btn {
+  background: #0056b3;
+  box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
+  border-radius: 10px;
+  height: 60px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
 }
