--- a/src/components/billboards-table/billboard-table.css
+++ b/src/components/billboards-table/billboard-table.css
@@ -7,7 +7,7 @@ table tbody {
 }
 table tbody tr:hover {
   background: #ffffff;
-  box-shadow: 0px 4px 4px 1px rgba(0, 86, 179, 0.15);
+  box-shadow: 0px 5px 5px 2px rgba(0, 86, 179, 0.15);
   cursor: pointer;
 }
 .lightert {
@@ -27,6 +27,7 @@ table th:last-child {
 .table thead th {
   vertical-align: middle;
   background: #0056b3;
+  text-align: center;
   /* border-radius: 6px 6px 0px 0px; */
 }
 .table td,
@@ -114,4 +115,5 @@ table th:last-child {
 }
 .locate {
   font-size: 10px;
+  color: #6e6b7b;
 }
