--- a/src/components/sign-up-form/sign-up-form.css
+++ b/src/components/sign-up-form/sign-up-form.css
@@ -1,9 +1,18 @@
-.signup-submit-btn{
-    background: #0056B3;
-box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
-border-radius: 10px;
-height: 60px;
-font-style: normal;
-font-weight: 500;
-font-size: 24px;
+.signup-submit-btn {
+  background: #0056b3;
+  box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
+  border-radius: 10px;
+  height: 60px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
 }
+/* Form ::placeholder {
+  width: 221px;
+  height: 14px;
+  font-size: 18px;
+  line-height: 14px;
+  color: #767676;
+  font-family: 'Raleway';
+  border: 0;
+} */
