--- a/src/components/billboards-display/billboards-display.css
+++ b/src/components/billboards-display/billboards-display.css
@@ -1,25 +1,27 @@
-.display-billboards{
-    margin-top: 1rem;
+.display-billboards {
+  margin-top: 1rem;
 }
 
 .select-all {
-    display: inline-block;
-    color: #0056B3;
-    border-bottom: 2px solid #0056B3;
-    margin: 0 2rem .5rem 0;
-    cursor: pointer;
-    font-style: normal;
-font-weight: 600;
-font-size: 14px;
-line-height: 16px;
-    padding-bottom: .6rem;
-    /* margin-bottom: .78rem; */
+  display: inline-block;
+  color: #0056b3;
+  border-bottom: 2px solid #0056b3;
+  margin: 0.7rem 2rem 1rem 0;
+  cursor: pointer;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 16px;
+  /* padding-bottom: 1rem; */
+  text-align: center;
+  padding: 10px 10px;
+  /* margin-bottom: .78rem; */
 }
 .select-all1 {
-    display: inline-block;
-    color:#342929 60%;
-    cursor: pointer;
-    /* border-bottom: 2.76px solid #0056B3; */
-    /* padding-bottom: .35rem; */
-    /* margin-bottom: .78rem; */
+  display: inline-block;
+  color: #342929 60%;
+  cursor: pointer;
+  /* border-bottom: 2.76px solid #0056B3; */
+  /* padding-bottom: .35rem; */
+  /* margin-bottom: .78rem; */
 }
