--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -56,6 +56,7 @@
   border: none;
   margin-top: 5px;
   margin-right: 22px;
+  margin-left: 35px;
   padding: 7px 15px;
   font-size: 16px;
 }
@@ -208,7 +209,6 @@ footer h3 {
 }
 .searchContainer {
   display: inline-flex;
-  margin-right: 35px;
   border-bottom-style: groove;
 }
 input[type='search']::-webkit-search-decoration,
