--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -230,3 +230,7 @@ input[type='search']::-webkit-search-results-decoration {
   font-size: 14px;
   line-height: 28px;
 }
+.header-logout{
+  margin: 0;
+  cursor: pointer;
+}
