create management component

--- a/src/components/side-bar-dropdown/side-bar-dropdown.css
+++ b/src/components/side-bar-dropdown/side-bar-dropdown.css
@@ -43,7 +43,7 @@
   cursor: pointer;
   font-size: 14px;
 }
-.sidebar-dropdown-content > *:first-child {
+/* .sidebar-dropdown-content > *:first-child {
   font-weight: 700;
   font-size: 16px;
-}
+} */
