--- a/src/components/billboards-table/billboard-table.css
+++ b/src/components/billboards-table/billboard-table.css
@@ -1,8 +1,8 @@
 table tbody {
-  /* overflow-x: scroll; */
   background-color: white;
 }
 .billboard-table {
+  overflow: scroll;
   width: 100%;
 }
 table tbody tr:hover {
