--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
-*{
+* {
   margin: 0;
   padding: 0;
   /* overflow-x: hidden; */
   font-family: 'Raleway';
   outline: none;
 }
-.row{
+.row {
   margin-right: 0;
   margin-left: 0;
 }
@@ -17,6 +17,5 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Raleway',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Raleway', monospace;
 }
