--- a/src/components/management/management-dashboard.css
+++ b/src/components/management/management-dashboard.css
@@ -1,9 +1,28 @@
 .dashy {
   display: flex;
   flex-flow: row;
-  color: chocolate;
+  z-index: -1;
+  width: auto;
 }
 /* .dashy > * {
   width: 35%;
   border: 1px solid red;
 } */
+.digital {
+  /* position: absolute;
+  left: 13.26%;
+  right: 75.28%;
+  top: 19.71%;
+  bottom: 70.43%; */
+  height: 116px;
+  width: 500px;
+  position: relative;
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 86, 179, 0.12);
+  border-radius: 6px;
+  border: 1px solid green;
+}
+.hermis {
+  /* max-width: 300px; */
+  overflow-x: scroll;
+}
