--- a/src/components/management/management-dashboard.css
+++ b/src/components/management/management-dashboard.css
@@ -1,22 +1,18 @@
-.dashy {
+/* .dashy {
   display: flex;
   flex-flow: row;
   z-index: -1;
   width: auto;
-}
-/* .dashy > * {
-  width: 35%;
-  border: 1px solid red;
 } */
 .digital {
-  /* position: absolute;
-  left: 13.26%;
+  /* position: fixed; */
+  /* left: 13.26%;
   right: 75.28%;
   top: 19.71%;
   bottom: 70.43%; */
   height: 116px;
   width: 500px;
-  position: relative;
+  /* position: relative; */
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 86, 179, 0.12);
   border-radius: 6px;
@@ -25,4 +21,26 @@
 .hermis {
   /* max-width: 300px; */
   overflow-x: scroll;
+}
+.types {
+  background: #ffffff;
+  border: 0.2px solid #0056b3;
+  box-shadow: 0px 4px 4px rgba(0, 86, 179, 0.1);
+  border-radius: 6px;
+  height: 126px;
+}
+.total,
+.billboards {
+  background: #0056b3;
+  box-shadow: 0px 4px 4px rgba(0, 86, 179, 0.1);
+  border-radius: 6px;
+  height: 130px;
+}
+.lagos {
+  height: 423px;
+  background: #ffffff;
+  border: 0.3px solid rgba(0, 86, 179, 0.5);
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 86, 179, 0.1);
+  border-radius: 6px;
 }
