--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,32 @@
   font-family: 'Raleway';
   outline: none;
 }
+
+/****************************** scroll bar edit **********************/
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 12px;
+  border-radius: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #0056b3;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #0056b3;
+  border-radius: 10px;
+} /****************************** end of scroll bar edit **********************/
 .row {
   margin-right: 0;
   margin-left: 0;
