implement the more details component and add feature for filter by category

--- a/src/components/billboards-display/billboards-display.css
+++ b/src/components/billboards-display/billboards-display.css
@@ -1,8 +1,18 @@
 .display-billboards {
   margin-top: 1rem;
 }
-
-.select-all {
+.display-billboards > span {
+  display: inline-block;
+  margin: 0.7rem 1.67rem 1rem 0;
+  cursor: pointer;
+  font-size: .89rem;
+}
+.display-billboards-active{
+  color: #0056b3;
+  border-bottom: 2px solid #0056b3;
+  font-weight: 600;
+}
+/* .select-all {
   display: inline-block;
   color: #0056b3;
   border-bottom: 2px solid #0056b3;
@@ -12,16 +22,15 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 16px;
-  /* padding-bottom: 1rem; */
   text-align: center;
   padding: 10px 10px;
-  /* margin-bottom: .78rem; */
-}
-.select-all1 {
+} */
+
+/* .select-all1 {
   display: inline-block;
   color: #342929 60%;
   cursor: pointer;
-  /* border-bottom: 2.76px solid #0056B3; */
-  /* padding-bottom: .35rem; */
-  /* margin-bottom: .78rem; */
-}
+  border-bottom: 2.76px solid #0056B3;
+  padding-bottom: .35rem;
+  margin-bottom: .78rem;
+} */
